--- a/template/package.json
+++ b/template/package.json
@@ -5,7 +5,7 @@
   "author": "{{ author }}",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config webpack/webpack.dev.conf.js",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config webpack/webpack.dev.conf.js",
     "start": "npm run dev",
     {{#if_eq runner "jest"}}
     "unit": "jest --config test/unit/jest.conf.js --coverage",
@@ -23,7 +23,10 @@
     "lint": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}}",
     "lint:fix": "eslint --ext .js,.vue src{{#unit}} test/unit{{/unit}}{{#e2e}} test/e2e/specs{{/e2e}} --fix",
     {{/lint}}
-    "build": "node webpack/build.js"
+    "build": "node webpack/build.js"{{#multipleServer}},
+    "build:dev": "cross-env NODE_ENV=development npm run build",
+    "build:test": "cross-env NODE_ENV=test npm run build",
+    "build:production": "cross-env NODE_ENV=production npm run build"{{/multipleServer}}
   },
   "dependencies": {
     "vue": "^2.5.2"{{#router}},
